# shared-ledger-system

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 13aabf75aa67_initial_migration.py
apps/content_app/: Dockerfile  prometheus.yml  pyproject.toml
apps/content_app/src/: main.py
apps/content_app/src/domain/: content_operation.py
apps/content_app/src/presentation/: dependencies.py  routers.py
apps/content_app/src/services/: content_service.py
apps/ecommerce_app/: Dockerfile  prometheus.yml  pyproject.toml
apps/ecommerce_app/src/: main.py
apps/ecommerce_app/src/domain/: ecommerce_operation.py
apps/ecommerce_app/src/presentation/: dependencies.py  routers.py
apps/ecommerce_app/src/services/: ecommerce_service.py
core/: config.py
core/domain/entities/: ledger_entity.py
core/domain/exceptions/: base_ledger_exception.py  ledger_exceptions.py
core/domain/models/: ledger_entry.py  user.py
core/domain/operations/: base_ledger_operation.py  composite_ledger_operation.py
core/domain/value_objects/: operation_config.py
core/presentation/middleware/: exception_handler.py
core/repositories/: ledger_repository.py
core/schemas/: ledger.py
core/services/: ledger_service.py
infrastructure/: rate_limiter.py
infrastructure/db/: base.py
infrastructure/logger/: logger.py
infrastructure/repositories/: sqlalchemy_ledger_repository.py
infrastructure/repositories/tests/: conftest.py  test_sqlalchemy_ledger_repository.py
