[tool.poetry]
name = "new"
version = "0.1.0"
description = ""
authors = ["Muhsin Kılıç <kmuhsinn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
pytest = "^8.3.4"
pre-commit = "^4.1.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
