[tool.poetry]
name = "content-app"
version = "0.1.0"
description = ""
authors = ["Muhsin Kılıç <kmuhsinn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.22.0"
slowapi = "^0.1.9"
jose = "^1.0.0"
fastapi = "^0.115.6"
prometheus-fastapi-instrumentator = "^7.0.2"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
typer = "==0.9.0"
commitizen = "^3.20.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.3.0"
ipdb = "^0.13.13"
pylint = "^3.1.0"
pytest-cov = "^5.0.0"
mypy = "^1.2.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
